infrastructure/controllers/base/csi-driver-iscsi/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: csi-driver-iscsi
  namespace: storage
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: democratic-csi
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.7.14/32
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 3260
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 443
    - to: []
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
